Fix tracker table overflow

--- a/client/src/components/TrackerTable.module.css
+++ b/client/src/components/TrackerTable.module.css
@@ -36,6 +36,9 @@
 .tracker__table_heading > tr > th,
 .tracker__table_body > tr > td {
   padding-left: 1.4rem;
+  max-width: 1rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media (max-width: 40.625rem) {
